# marmot

./: .gitignore  .tags  .tags_sorted_by_file  CMakeLists.txt  LICENSE.txt  README.md  marmot.sublime-project  marmot.sublime-workspace
include/marmot/: Error.hpp  Function.hpp  Proxy.hpp  Reference.hpp  Stack.hpp  State.hpp  Table.hpp  VM.hpp  VM_call.inl  VM_pop.inl  VM_read.inl
include/squirtle/: VM.hpp  VM_call.inl  VM_pop.inl  VM_read.inl
include/test/: Test.hpp
src/: Main.cpp
src/marmot/: VM.cpp
src/squirtle/: VM.cpp
src/test/: Test.cpp  TestFunction.cpp  TestReference.cpp  TestStack.cpp  TestState.cpp  TestTable.cpp
